Fix after resolving merge conflicts, update NEWS.md